# docs/swagger.json
@@ -159,6 +159,13 @@
                         "schema": {
                             "$ref": "#/definitions/article.UpdateArticleTitleBody"
                         }
+                    },
+                    {
+                        "type": "integer",
+                        "description": "article id",
+                        "name": "articleId",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -356,7 +363,7 @@
                 }
             }
         },
-        "/tag/articles{tagId}": {
+        "/tag/articles/{tagId}": {
             "get": {
                 "description": "tag id에 해당하는 모든 articles를 반환합니다.",
                 "tags": [
